--- a/style.css
+++ b/style.css
@@ -200,22 +200,19 @@ footer {
 }
 
 .footer-top {
-  height: 600px;
   padding-bottom: 30px;
   margin-bottom: 30px;
-  border-bottom: 1px solid purple;
+  border-bottom: 1px solid gray;
 
   display: flex;
 }
 
 .footer-top .footer-left {
   flex-basis: 30%;
-  background-color: pink;
 }
 
 .footer-top .footer-right {
   flex-basis: 70%;
-  background-color: #20b2aa;
 }
 
 .footer-nav {
@@ -233,12 +230,10 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: aquamarine;
 }
 
 .footer-bottom > * {
   padding: 5px 10px;
-  background-color: yellow;
 }
 
 ul{
@@ -246,4 +241,25 @@ ul{
   margin-left: 5px;
   font-size: 20px;
   font-weight: bold;
+  color: white;
+  line-height: 25px;
+}
+
+.title{
+  color: rgb(65, 87, 110);
+}
+
+.flag{
+  display: inline-block;
+  margin-right: 5px;
+}
+
+span{
+  color: white;
+  font-weight: 500;
+}
+
+.reg{
+  color: white;
+  background-color: slategray;
 }
